<package>

  <name>assignment3</name>
  <version>0.2.0</version>
  <description>Assignment 3</description>
  <author email="sleonard@jhu.edu">Simon Leonard</author>
  <maintainer email="sleonard@jhu.edu">Simon Leonard</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_setup_assistant/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_setup_assistant</url>

  <build_depend>moveit_core</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ros_cpp</build_depend>

  <run_depend>ros_cpp</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <moveit_core plugin="${prefix}/assignment3_plugin.xml"/>
  </export>
  
</package>
